YouTube API stuff

--- a/soverance.com/Areas/EndlessReach/Views/EndlessReach/Index.cshtml
+++ b/soverance.com/Areas/EndlessReach/Views/EndlessReach/Index.cshtml
@@ -90,6 +90,9 @@
                         and use it to battle your way through the alien hordes and make the regions safe for colonization.
                         The future of humanity depends on you!
                     </p>
+                    <p>
+                        Designed exclusively for mobile devices, this punishingly difficult shmup
+                    </p>
                 </div>
                 <div class="mt60 table g-bottom">
                     <div class="table-cell valign-middle">
@@ -120,7 +123,7 @@
                                                 <i class="fa fa-shield fsize-80 fweight-400 color-6"></i>
                                                 <p>Intense Combat</p>
                                             </div>
-                                            <p>Your Starfighter is equipped with powerful weapons, including blasters, missles, and a boost feature. Collect powerups to deal more damage, and use head tracking to lock-on homing missles.</p>
+                                            <p>Your Starfighter is equipped with a powerful laser cannon, which can be upgraded to extreme levels. Collect powerups to deal more damage, and lay waste to the alien invasion of the Reach.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -133,7 +136,7 @@
                                                 <i class="fa fa-puzzle-piece fsize-80 fweight-400 color-6"></i>
                                                 <p>Devastating Overloads</p>                                                
                                             </div>
-                                            <p>Upgrade your blasters too much and you may find yourself overloading with power - time the release of this energy just right and you can destroy everything in range. Miss the timing, and your ship explodes.</p>
+                                            <p>Upgrade your cannon too much and you may find yourself overloading with power - time the release of this energy just right and you can destroy everything in range. Miss the timing, and your ship explodes.</p>
                                         </div>
                                     </div>
                                 </div>
