--- a/soverance.com/Views/Home/About.cshtml
+++ b/soverance.com/Views/Home/About.cshtml
@@ -63,7 +63,7 @@
             <div class="tabs-nav">
                 <ul class="list-inline nav nav-tabs tabs-slider">
                     <li class="col-lg-3 col-md-3">
-                        <a href="/ethereal" data-toggle="tab">
+                        <a href="/ethereal">
                             <div class="img-wrap">
                                 <img src="~/images/game-img-1.jpg" alt="">
                             </div>
@@ -78,7 +78,7 @@
                         </a>
                     </li>
                     <li class="col-lg-3 col-md-3">
-                        <a href="/endlessreach" data-toggle="tab">
+                        <a href="/endlessreach">
                             <div class="img-wrap">
                                 <img src="~/images/game-img-2.jpg" alt="">
                             </div>
@@ -93,7 +93,7 @@
                         </a>
                     </li>
                     <li class="col-lg-3 col-md-3">
-                        <a href="/echosphere" data-toggle="tab">
+                        <a href="/echosphere">
                             <div class="img-wrap">
                                 <img src="~/images/game-img-3.jpg" alt="">
                             </div>
@@ -108,7 +108,7 @@
                         </a>
                     </li>
                     <li class="col-lg-3 col-md-3">
-                        <a href="/ctf-elemental" data-toggle="tab">
+                        <a href="/ctf-elemental">
                             <div class="img-wrap">
                                 <img src="~/images/game-img-4.jpg" alt="">
                             </div>
@@ -123,7 +123,7 @@
                         </a>
                     </li>
                     <li class="col-lg-3 col-md-3">
-                        <a href="/ffxi-fighter" data-toggle="tab">
+                        <a href="/ffxi-fighter">
                             <div class="img-wrap">
                                 <img src="~/images/game-img-5.jpg" alt="">
                             </div>
