Added Azure AD Auth for ASP.NET Core 2.1

--- a/soverance.com/Views/Shared/_Layout.cshtml
+++ b/soverance.com/Views/Shared/_Layout.cshtml
@@ -304,8 +304,8 @@
                                 </button>
                             </form>
                         </div>
-                        <a href="#" class="btn header-btn ml25 color-white hidden-sm hidden-xs">
-                            Join us Now
+                        <a href="/account/signin" class="btn header-btn ml25 color-white hidden-sm hidden-xs">
+                            Sign In
                         </a>
                     </div>
                 </div>
