Fix for custom error page

--- a/soverance.com/Views/Shared/Error.cshtml
+++ b/soverance.com/Views/Shared/Error.cshtml
@@ -8,7 +8,7 @@
     <div class="table-row">
         <div class="table-cell valign-middle text-center">
             <div>
-                <img src="~/images/404/404-img.png" alt="">
+                <img src="~/images/error/404-img.png" alt="">
             </div>
             <div class="title-error mt30">
                 <h2 class="text-danger">An error occurred while processing your request.</h2>
