--- a/soverance.com/Views/Account/Profile.cshtml
+++ b/soverance.com/Views/Account/Profile.cshtml
@@ -21,6 +21,9 @@
                             @User.FindFirst("name").Value
                         </li>
                     </ul>
+                    <p>
+                        <a asp-controller="Account" asp-action="SignOut" class="btn header-btn ml25 color-white hidden-sm hidden-xs">Sign Out</a>
+                    </p>
                 </div>
             </div>
         </div>
@@ -30,6 +33,6 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a asp-controller="Account" asp-action="Signin">Sign in</a></li>
+        <li><a asp-controller="Account" asp-action="SignIn" class="btn header-btn ml25 color-white hidden-sm hidden-xs">Sign in</a></li>
     </ul>
 }
