Updated Games page

--- a/soverance.com/Views/Home/Portfolio.cshtml
+++ b/soverance.com/Views/Home/Portfolio.cshtml
@@ -24,7 +24,7 @@
             <div class="games-container">
                 <div class="g-item col-lg-4 col-md-4 col-sm-6 col-xs-12 mb30 wow fadeInUp" data-wow-duration="1s">
                     <div class="image-container">
-                        <img src="~/images/games/ethereal/small-slide-3.jpg" alt="" class="img-responsive">
+                        <img src="~/images/games/game-1.jpg" alt="" class="img-responsive">
                     </div>
                     <div class="bottom-container">
                         <div class="table">
@@ -52,7 +52,7 @@
                 </div>
                 <div class="g-item col-lg-4 col-md-4 col-sm-6 col-xs-12 mb30 wow fadeInUp" data-wow-duration="1s">
                     <div class="image-container">
-                        <img src="~/images/games/endlessreach/small-slide-5.jpg" alt="" class="img-responsive">
+                        <img src="~/images/games/game-2.jpg" alt="" class="img-responsive">
                     </div>
                     <div class="bottom-container">
                         <div class="table">
