--- a/soverance.com/Views/Shared/_Layout.cshtml
+++ b/soverance.com/Views/Shared/_Layout.cshtml
@@ -252,10 +252,18 @@
                                             <li>
                                                 <a asp-area="Ethereal" asp-controller="Ethereal" asp-action="EULA">EULA</a>
                                             </li>
+                                            <li>
+                                                <a href="https://github.com/Soverance/EtherealLegends">Source Code</a>
+                                            </li>
                                         </ul>
                                     </li>
-                                    <li>
+                                    <li class="menu-item-has-children">
                                         <a asp-area="EndlessReach" asp-controller="EndlessReach" asp-action="Index">Endless Reach</a>
+                                        <ul class="sub-menu">
+                                            <li class="menu-item-has-children">
+                                                <a href="https://github.com/Soverance/EndlessReach">Source Code</a>
+                                            </li>
+                                        </ul>
                                     </li>
                                 </ul>
                             </li>
